--- a/notebooks/p01_pandas_intro/v02_pandas_basics.ipynb
+++ b/notebooks/p01_pandas_intro/v02_pandas_basics.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "**Prerequisites**\n",
     "\n",
-    "- [pandas Intro](intro.ipynb)  \n",
+    "- [pandas Intro](./v01_pandas_intro.ipynb)\n",
     "\n",
     "\n",
     "**Outcomes**\n",
