--- a/notebooks/p02_organizing_data_with_pandas_1/01_the_index.ipynb
+++ b/notebooks/p02_organizing_data_with_pandas_1/01_the_index.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "**Prerequisites**\n",
     "\n",
-    "- [Introduction to pandas](intro.ipynb)  \n",
+    "- [Introduction to pandas](../p01_pandas_intro/v01_pandas_intro.ipynb)  \n",
     "\n",
     "\n",
     "**Outcomes**\n",
