--- a/notebooks/p02_organizing_data_with_pandas_1/02_storage_formats.ipynb
+++ b/notebooks/p02_organizing_data_with_pandas_1/02_storage_formats.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "**Prerequisites**\n",
     "\n",
-    "- [Intro to DataFrames and Series](intro.ipynb)  \n",
+    "- [Intro to DataFrames and Series](../p01_pandas_intro/v01_pandas_intro.ipynb)\n",
     "\n",
     "\n",
     "**Outcomes**\n",
