add link to python fundamentals

--- a/notebooks/p01_pandas_intro/v01_pandas_intro.ipynb
+++ b/notebooks/p01_pandas_intro/v01_pandas_intro.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "**Prerequisites**\n",
     "\n",
-    "- Python Fundamentals (Summer pre course)\n",
+    "- [Python Fundamentals](https://datascience.quantecon.org/python_fundamentals/index.html) (Summer pre course)\n",
     "\n",
     "\n",
     "**Outcomes**\n",
