--- a/notebooks/p04_pandas_review/01_pandas_example_movieLens.ipynb
+++ b/notebooks/p04_pandas_review/01_pandas_example_movieLens.ipynb
@@ -746,9 +746,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "css",
    "language": "python",
-   "name": "python3"
+   "name": "css"
   },
   "language_info": {
    "codemirror_mode": {
@@ -760,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.2"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
