--- a/notebooks/p04_pandas_review/02_pandas_review_population.ipynb
+++ b/notebooks/p04_pandas_review/02_pandas_review_population.ipynb
@@ -844,9 +844,9 @@
   "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "css",
    "language": "python",
-   "name": "python3"
+   "name": "css"
   },
   "language_info": {
    "codemirror_mode": {
@@ -858,7 +858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
