really remove qeds

--- a/notebooks/p03_organizing_data_with_pandas_2/v2_pandas_data_reshape.ipynb
+++ b/notebooks/p03_organizing_data_with_pandas_2/v2_pandas_data_reshape.ipynb
@@ -38,10 +38,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "%matplotlib inline\n",
-    "# activate plot theme\n",
-    "import qeds\n",
-    "qeds.themes.mpl_style();"
+    "%matplotlib inline"
    ]
   },
   {
