--- a/notebooks/p07_plotting/v3_plotting_libraries.ipynb
+++ b/notebooks/p07_plotting/v3_plotting_libraries.ipynb
@@ -358,6 +358,15 @@
     "\n",
     "The (javascript) code below shows how to create this chart:\n",
     "\n",
+    "# 1. we load the csv chart\n",
+    "# 2. first function will unpack one column from the dataset\n",
+    "# ex: the x variable comes from the Date column \n",
+    "# 3. do some customization of the chart: colors, type,\n",
+    "# 4. then we will use plotly, var layout: customization of the chart\n",
+    "# then we\n",
+    "# this is differeent to the vega approach, where we had some grammar, marrked types, encoding\n",
+    "# this is more direct, and closer to how we might do with mightplot\n",
+    "\n",
     "```js\n",
     "Plotly.d3.csv('https://raw.githubusercontent.com/plotly/datasets/master/finance-charts-apple.csv', function(err, rows){\n",
     "\n",
@@ -420,20 +429,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# this are used for javascript!\n",
+    "# we've done most of our example in python\n",
+    "# we are going to be able to use our python skills in javascript"
+   ]
   },
   {
    "cell_type": "code",
@@ -479,9 +481,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 2.7.16 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -494,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
