--- a/notebooks/p09_timeseries_data_with_pandas/timeseries.ipynb
+++ b/notebooks/p09_timeseries_data_with_pandas/timeseries.ipynb
@@ -1923,12 +1923,14 @@
   "celltoolbar": "Slideshow",
   "date": 1596755784.16782,
   "filename": "timeseries.rst",
+  "interpreter": {
+   "hash": "31582b9feba862c420bc95ad7fac43fb721c474490d1710b4e50ac63470f9531"
+  },
   "jupytext": {
    "formats": "ipynb,md:myst"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -1941,7 +1943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   },
   "title": "Time series",
   "widgets": {
