--- a/notebooks/p08_sql/01_data_description.ipynb
+++ b/notebooks/p08_sql/01_data_description.ipynb
@@ -540,10 +540,10 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "interpreter": {
-   "hash": "06e05088bf2d2704501f452c5673235c92421ea24b381cad1d147a1ece3057ad"
+   "hash": "31582b9feba862c420bc95ad7fac43fb721c474490d1710b4e50ac63470f9531"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.2 64-bit ('css': conda)",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -556,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
