--- a/notebooks/p13_web_scraping_intro/web-scraping.ipynb
+++ b/notebooks/p13_web_scraping_intro/web-scraping.ipynb
@@ -174,12 +174,16 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3.8.2 64-bit",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "name": "python",
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
