--- a/project-guide/project.tex
+++ b/project-guide/project.tex
@@ -55,13 +55,15 @@ Final Project               & Jupyter notebook      & Group       & 85 & Dec 23\
 
 {\bf Dates are firm and not open for negotiation.}
 
+Each part of the exam must be uploaded to Brightspace before the deadline.
+
 
 The components consist of:
 \begin{itemize}
 
 \item {\bf Three project ideas.}
 
-Write down three project ideas in class. One or two sentences each is enough.
+Write down three project ideas. One or two sentences each is enough.
 Use your imagination.  Be creative.  Speak to others. Write down things that
 interest you. This will not be graded, but it will give you something to work
 with later on.
@@ -94,10 +96,9 @@ follow up on your work.
 
 \item {\bf Final project.}
 
-You should submit your {\bf notebook\/} to
-\href{mailto:sgl290@nyu.edu}{sgl290@nyu.edu} and
-\href{mailto:cgc332@nyu.edu}{cgc332@nyu.edu} by the due date listed
-on the course website. The subject line should be:  ``ECON-GA-4003 Project''. The
+You should submit your {\bf notebook\/} to Brightspace by the due date listed
+above. The submission should include any data or supplementary files needed to
+execute your project. The final writeup should be a Jupyter notebook and the
 file name should be your last names separated by dashes and a short title ---
 something like {\tt Jones-Smith-Zhang.ipynb}.
 
