--- a/notebooks/p13_web_scraping_intro/web-scraping.ipynb
+++ b/notebooks/p13_web_scraping_intro/web-scraping.ipynb
@@ -171,6 +171,95 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "272e3533",
+   "metadata": {},
+   "source": [
+    "Web Scraping Example: Quotes to scrape\n",
+    "*** work on teerminal ***\n",
+    "scrapy can be run in the scrapy shell as we'll see. However, it can be automated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7eea259c",
+   "metadata": {},
+   "source": [
+    "conda create -n scrapy-example python 3.7\n",
+    "\"click enter\"\n",
+    "conda activate scrapy-example\n",
+    "which pip\n",
+    "pip install scrapy ipython\n",
+    "...\n",
+    "response.css\n",
+    "quote_div = response.css('...')\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fc45273",
+   "metadata": {},
+   "source": [
+    "We can create one scrapy project to automate the web scraping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c14e8080",
+   "metadata": {},
+   "source": [
+    "scrapy startptoject quotes_example\n",
+    "*** the project got created but I cannot see the tree ***\n",
+    "You can start your first spider with:\n",
+    "    cd hollywood_example\n",
+    "    scrapy genspider example example.com\n",
+    "*** but I cannot see the tree ***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "685bc28c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a60352cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'scrapy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/dd/6bc_8ck52pqb88t255094g6m0000gn/T/ipykernel_96155/3295989940.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mQuotesSpider\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscrapy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSpider\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'quotes'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mallowed_domains\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'quotes.toscrape.com'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mstart_urls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'https://quotes.toscrape.com/'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'scrapy' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class QuotesSpider(scrapy.Spider):\n",
+    "    name = 'quotes'\n",
+    "    allowed_domains = ['quotes.toscrape.com']\n",
+    "    start_urls = ['https://quotes.toscrape.com/']\n",
+    "\n",
+    "    def parse(self, response):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "713a7f94",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -182,7 +271,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.2"
   }
  },
